Minor changes to Dockerfile, README and .env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 POSTGRES_PASSWORD=password
+# change 'db' to 'localhost' if postgres is running locally
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
