--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "3"
-diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
+chrono = "0.4"
+diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
 dotenv = "0.15.0"
 flexi_logger = "0.20.1"
