--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ chrono = "0.4"
 diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
 dotenv = "0.15.0"
 flexi_logger = "0.20.1"
-rand = "0.8.4"
+array2d = "0.2.1"
+petgraph = "0.5.0"
