--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aot-backend"
 version = "0.1.0"
 edition = "2021"
+default-run = "aot-backend"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,5 +13,6 @@ diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
 dotenv = "0.15.0"
 flexi_logger = "0.20.1"
 rand = "0.8.4"
+rayon = "1.5.1"
 array2d = "0.2.1"
 petgraph = "0.5.0"
