--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ POSTGRES_PASSWORD=password
 # change 'db' to 'localhost' if postgres is running locally
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
+API_TOKEN = your_token_id
+TEMPLATE_NAME = your_template_name
