--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ default-run = "aot-backend"
 
 [dependencies]
 actix-web = "3"
+anyhow = "1.0.53"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
 dotenv = "0.15.0"
 flexi_logger = "0.20.1"
+log = "0.4.14"
 rand = "0.8.4"
 rayon = "1.5.1"
 array2d = "0.2.1"
