feat: Error handling, get simulation result

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,14 @@ default-run = "aot-backend"
 actix-web = "3"
 anyhow = "1.0.53"
 chrono = { version = "0.4", features = ["serde"] }
+derive_more = "0.99.17"
 diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
 dotenv = "0.15.0"
 flexi_logger = "0.20.1"
 log = "0.4.14"
 rand = "0.8.4"
 rayon = "1.5.1"
+thiserror = "1.0.30"
 array2d = "0.2.1"
 petgraph = "0.5.0"
 num-integer = "0.1"
