fix(changes): Work in progress

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@ POSTGRES_PASSWORD=password
 # change 'db' to 'localhost' if postgres is running locally
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
+
+COOKIE_KEY
+
 TWOFACTOR_API_TOKEN = your_token_id
 TWOFACTOR_TEMPLATE_NAME = your_template_name
