--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,12 @@ POSTGRES_PASSWORD=password
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
 
-COOKIE_KEY
+COOKIE_KEY=
+TWOFACTOR_API_TOKEN=
+TWOFACTOR_VERIFY_TEMPLATE=
+TWOFACTOR_RESETPW_TEMPLATE=
+RECAPTCHA_SECRET=
 
-TWOFACTOR_API_TOKEN = your_token_id
-TWOFACTOR_TEMPLATE_NAME = your_template_name
+PRAGYAN_LOGIN_URL=
+PRAGYAN_EVENT_ID=
+PRAGYAN_EVENT_SECRET=
