--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@ POSTGRES_PASSWORD=password
 # change 'db' to 'localhost' if postgres is running locally
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
+
+COOKIE_KEY=
+TWOFACTOR_API_TOKEN=
+TWOFACTOR_VERIFY_TEMPLATE=
+TWOFACTOR_RESETPW_TEMPLATE=
+RECAPTCHA_SECRET=
+
+PRAGYAN_LOGIN_URL=
+PRAGYAN_EVENT_ID=
+PRAGYAN_EVENT_SECRET=
