--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ default-run = "aot-backend"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
+actix-web = {version = "3", features = ["rustls"] }
 anyhow = "1.0.53"
-chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99.17"
+chrono = { version = "0.4.10", features = ["serde"] }
 diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
 dotenv = "0.15.0"
+actix-session = "0.4.1"
 flexi_logger = "0.20.1"
 log = "0.4.14"
 rand = "0.8.4"
@@ -20,5 +21,5 @@ rayon = "1.5.1"
 thiserror = "1.0.30"
 array2d = "0.2.1"
 petgraph = "0.5.0"
-num-integer = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+pwhash = "1"
