feat: Docker setup for prod, fix: CORS config, leaderboard
* Run migrations in binary

* Cache deps in dockerfile

* Fix deps recompiling in docker on every hot reload when lang server runs cargo check

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ petgraph = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 pwhash = "1"
 actix-cors = "0.5.4"
+diesel_migrations = "1.4.0"
