--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ POSTGRES_PASSWORD=password
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
 
-COOKIE_KEY=
+COOKIE_KEY=some_long_string_with_alteast_32_chars
 TWOFACTOR_API_TOKEN=
 TWOFACTOR_VERIFY_TEMPLATE=
 TWOFACTOR_RESETPW_TEMPLATE=
@@ -14,3 +14,6 @@ PRAGYAN_EVENT_ID=
 PRAGYAN_EVENT_SECRET=
 
 FRONTEND_URL=
+
+SERVER_PORT=8000
+PGADMIN_PORT=8080
