--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,12 @@ version: '3.9'
 services:
   server:
     entrypoint: ./entrypoint.sh
-    build:
-      context: .
+    build: .
     restart: unless-stopped
     depends_on:
       - db
     ports:
-      - 8000:8000
-    volumes:
-      - ./:/usr/src/aot-backend
+      - ${SERVER_PORT}:8000
 
   db:
     image: postgres
@@ -29,7 +26,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: aot@aot.com
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - 8080:80
+      - ${PGADMIN_PORT}:80
     volumes:
       - aot_pgadmin:/var/lib/pgadmin
 
