--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ POSTGRES_PASSWORD=password
 # change 'db' to 'localhost' if postgres is running locally
 DATABASE_URL=postgres://aot:password@db/aot
 PGADMIN_DEFAULT_PASSWORD=pgadminpass
+# change 'redis' to 'localhost' if redis is running locally
+REDIS_URL=redis:6379
 
 COOKIE_KEY=some_long_string_with_alteast_32_chars
 TWOFACTOR_API_TOKEN=
