--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     entrypoint: ./entrypoint.sh
     build: .
     restart: unless-stopped
+    environment:
+      TZ: "Asia/Calcutta"
     depends_on:
       - db
     ports:
