--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,8 @@ petgraph = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 pwhash = "1"
 actix-cors = "0.5.4"
+diesel_migrations = "1.4.0"
+futures = "0.3.21"
+redis = { version = "0.21.5", features = ["r2d2"] }
+r2d2 = "0.8.9"
+actix-redis = "0.9.2"
