--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,8 +1,6 @@
 FROM rust:1.59.0-slim as base
 WORKDIR /usr/src/aot-backend
 RUN apt-get update -y && apt-get install -y libpq-dev netcat
-RUN cargo install diesel_cli --no-default-features --features postgres
-RUN cargo install cargo-watch
 RUN cargo install cargo-chef
 
 FROM base as planner
@@ -11,6 +9,6 @@ RUN cargo chef prepare --recipe-path recipe.json
 
 FROM base
 COPY --from=planner /usr/src/aot-backend/recipe.json recipe.json
-RUN cargo chef cook --recipe-path recipe.json
+RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
-RUN cargo build
+RUN cargo build --release
