fix(auth):change otp service

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ PGADMIN_DEFAULT_PASSWORD=pgadminpass
 REDIS_URL=redis:6379
 
 COOKIE_KEY=some_long_string_with_alteast_32_chars
-TWOFACTOR_API_TOKEN=
-TWOFACTOR_VERIFY_TEMPLATE=
-TWOFACTOR_RESETPW_TEMPLATE=
 RECAPTCHA_SECRET=
+PLIVO_AUTH_ID=
+PLIVO_AUTH_TOKEN=
+PLIVO_SENDER_ID=
 
 PRAGYAN_LOGIN_URL=
 PRAGYAN_EVENT_ID=
