--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,12 @@ thiserror = "1.0.30"
 array2d = "0.2.1"
 petgraph = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 pwhash = "1"
 actix-cors = "0.5.4"
 diesel_migrations = "1.4.0"
 futures = "0.3.21"
+base64 = "0.13.0"
 redis = { version = "0.21.5", features = ["r2d2"] }
 r2d2 = "0.8.9"
 actix-redis = "0.9.2"
