--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
       - ${PGADMIN_PORT}:80
     volumes:
       - aot_pgadmin:/var/lib/pgadmin
+    logging:
+      driver: none
 
   redis:
     image: redis
