--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM rust:1.59.0-slim as base
+FROM rust:slim as base
 WORKDIR /usr/src/aot-backend
 RUN apt-get update -y && apt-get install -y libpq-dev netcat
 RUN cargo install cargo-chef
