--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ aor23 ]
   pull_request:
-    branches: [ dev ]
+    branches: [ aor23 ]
 
 jobs:
   check:
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.59.0
+          toolchain: stable
           profile: minimal
           override: true
           components: clippy
