--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ redis = { version = "0.22.1", features = ["r2d2"] }
 r2d2 = "0.8.10"
 actix-redis = "0.12.0"
 awc = "3.0.1"
+diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
