--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -6,3 +6,14 @@ services:
       PRODUCTION: 'true'
     volumes:
       - ./logs:/usr/src/aot-backend/logs
+    ports:
+      - "8000"
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - server
+    ports:
+      - "${SERVER_PORT}:4000"
