--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -11,6 +11,7 @@ services:
 
   nginx:
     image: nginx:latest
+    profiles: ["nginx"]
     volumes:
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
