fix(otp): change request client

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ RECAPTCHA_SECRET=
 PLIVO_AUTH_ID=
 PLIVO_AUTH_TOKEN=
 PLIVO_SENDER_ID=
+PLIVO_CALLBACK_URL=
 
 PRAGYAN_LOGIN_URL=
 PRAGYAN_EVENT_ID=
