--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,5 @@ r2d2 = "0.8.10"
 actix-redis = "0.12.0"
 awc = "3.0.1"
 diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
+oauth2 = "4.4.2"
+jsonwebtoken = "9.2.0"
