WIP(oauth): added jwt and cookie

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ actix-redis = "0.12.0"
 awc = "3.0.1"
 diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
 oauth2 = "4.4.2"
+jsonwebtoken = "9.2.0"
