--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ FRONTEND_URL=
 
 SERVER_PORT=8000
 PGADMIN_PORT=8080
+
+JWT_SECRET=
+JWT_MAX_AGE=
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
