--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ SERVER_PORT=8000
 PGADMIN_PORT=8080
 
 JWT_SECRET=
-JWT_MAX_AGE=
+MAX_AGE_IN_MINUTES=10080
 
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
