Feat: Add Google OAuth 2.0  (#64)
* feat(auth): google oauth2

WIP: google oauth2 access token generation

WIP: display user information from google

WIP(gauth2): added env vars and proper comments

WIP(oauth): added jwt and cookie

fix: removed unnecessary comments

WIP(extractor): added token/cookie extractor and added health checker route

feat: organize code into proper files and proper comments

feat: testing branch

feat(oath2): refactored code for new auth, and fixes

fix: lint errors

fix: reviewed changes

* feat: login on only one device

* feat: remove pragyan auth, minor fixes

* feat: refactor oauth for frontend

* fix: add time stamp to device_id, minor fixes

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,12 @@ FRONTEND_URL=
 
 SERVER_PORT=8000
 PGADMIN_PORT=8080
+
+MAX_AGE_IN_MINUTES=10080
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_REDIRECT_URL=
+GOOGLE_OAUTH_AUTH_URL=https://accounts.google.com/o/oauth2/v2/auth
+GOOGLE_OAUTH_TOKEN_URL=https://www.googleapis.com/oauth2/v3/token
+GOOGLE_OAUTH_USER_INFO_URL=https://www.googleapis.com/oauth2/v3/userinfo
