validator response type

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,6 @@ GOOGLE_OAUTH_REDIRECT_URL=
 GOOGLE_OAUTH_AUTH_URL=https://accounts.google.com/o/oauth2/v2/auth
 GOOGLE_OAUTH_TOKEN_URL=https://www.googleapis.com/oauth2/v3/token
 GOOGLE_OAUTH_USER_INFO_URL=https://www.googleapis.com/oauth2/v3/userinfo
+
+
+BOMB_MAX_COUNT = 10
