feat: add workflow for socket

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - aor23
       - aor24
+      - socket
   pull_request:
     branches:
       - aor23
       - aor24
+      - socket
 
 jobs:
   check:
