--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ default-run = "aot-backend"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tungstenite = "0.16"
+actix = "0.13.0"
+actix-web-actors = "4"
 actix-web = {version = "4", features = ["rustls"] }
+actix-rt = "2.9.0"
+actix-ws = "0.2.5"
+futures-util = "0.3.30"
 anyhow = "1.0.68"
 derive_more = "0.99.17"
 chrono = { version = "0.4.23", features = ["serde"] }
@@ -23,6 +29,7 @@ thiserror = "1.0.38"
 array2d = "0.3.0"
 petgraph = "0.6.2"
 serde = { version = "1.0.151", features = ["derive"] }
+serde_json = "1.0"
 pwhash = "1"
 actix-cors = "0.6.4"
 diesel_migrations = "2.0.0"
